--- a/index.html
+++ b/index.html
@@ -3,109 +3,62 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Zhansen's Personal Site</title>
+  <title>Zhansen Shingis</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="icons8-jake-16.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td>
-        <img src="IMG_1878.jpeg" alt="Zhansen photo">
-      </td>
-      <td>
-        <h1>Zhansen Shingis</h1>
-        <p> <em><strong>Student</strong> and <strong>Speedcuber</strong>
-          </em>
-        </p>
-        <p>I am Student , currently preparing for the US colleges. My main extracirricular is solving puzzles under time.</p>
-      </td>
-    </tr>
-  </table>
-  <hr size="3" noshade>
-  <h3>Education</h3>
-  <ul>
-    <li><a href="https://www.nfactorial.school/">nFactorial</a></li>
-    <li><a href="https://www.goethe.de/de/index.html">Geothe</a></li>
-    <li>Bridge</li>
-    <li>Khan Academy</li>
-  </ul>
-
-  <h3>Achievements</h3>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>year</th>
-        <th>achievement</th>
-      </tr>
-    </thead>
-    <tbody>
-      <td>2018</td>
-      <td>National Record</td>
-    </tbody>
-    <tfoot>
-      <td>2020</td>
-      <td>Brock 28 rank</td>
-    </tfoot>
-  </table>
-  <hr>
-  <h2><a href="hobbies.html">Hobbies</a></h2>
-  <p><a href="Contacts.html">contact me</a></p>
-  <hr>
-  <table cellspacing = "20">
-    <caption>sills gained all over the time</caption>
-    <br>
-    <tr>
-      <td>
-        <table border="1">
-
-          <tr>
-            <th scope="col">Ability</th>
-            <th scope="col">rate</th>
-          </tr>
-          <tr>
-            <th scope="row"> fastfingers </th>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <th scope="row"> paraphrase</th>
-            <td>⭐</td>
-          </tr>
-          <tr>
-            <th scope="row"> math</th>
-            <td>⭐⭐</td>
-          </tr>
-
-        </table>
-      </td>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>Hi, I'm Zhansen </h1>
+    <h2 class="speedcuber">A Speedcuber<h2>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="mountain-image" src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="" alt="">
+      <h2>Hello.</h2>
+      <p>I can solve different puzzles in seconds. I am a former National Record Holder by Pyraminx.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>3x3 & Pyraminx</h3>
+        <p>These are my main disciplines and I magaged to solve them in really good time. (3x3 - 8.66s official average time; Pyra - 3.13s official average time)</p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Teaching people</h3>
+        <p> At the time, when I was a crazy speedcuber, everybody asked me to teach them how solve cubes. I have teached a lot of people, therefore I opened a small club at school to teach people speedcubing.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you are also interested in speedcubing.</h3>
+      <p>We can have a chat and meet sometime.</p>
+    </div>
+    <a class="btn" href="mailto:shingis.zhansen@gmail.com">CONTACT ME</a>
+  </div>
 
 
-      <td>
-        <table border="1">
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.worldcubeassociation.org/persons/2017SHIN16?">WCA Profile</a>
+    <a class="footer-link" href="https://www.worldcubeassociation.org/">Website</a>
+    <p style = "color: #EAF6F6">© Zhansen Shingis 2022| Zhansen#9170 Discord</p>
+  </div>
 
-          <tr>
-            <th scope="col">Ability</th>
-            <th scope="col">rate</th>
-          </tr>
-          <tr>
-            <th scope="row"> fastfingers </th>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <th scope="row"> paraphrase</th>
-            <td>⭐</td>
-          </tr>
-          <tr>
-            <th scope="row"> math</th>
-            <td>⭐⭐</td>
-          </tr>
+  </div>
 
-        </table>
-      </td>
-    </tr>
-  </table>
-  <form class="" action="index.html" method="post">
-    
-  </form>
+
 </body>
 
 </html>
