--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="/cloud.png" alt="cloud-img">
     <h1>Hi, I'm Zhansen </h1>
     <h2 class="speedcuber">A Speedcuber<h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img class="mountain-image" src="images/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="/cloud.png" alt="cloud-img">
+        <img class="mountain-image" src="/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
